fix/Prueba de tw Animated separated de testing

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # API Configuration
 # URL base de la API backend
 # Por defecto usa localhost:8000 si no se especifica
-VITE_API_URL=http://localhost:8000
+VITE_API_URL=https://protective-manifestation-production.up.railway.app
 
 # Ejemplos para otros entornos:
 # Producción: VITE_API_URL=https://api.studdeo.com
